# lca-production-monitoring

./: .gitignore  README.md  agent.py  app.py  pyproject.toml
.claude/skills/langsmith-upload-traces/: SKILL.md
python/: pyproject.toml
python/capstone/: upload_csa_traces.py
python/capstone/conversation_agents/: ConversationGeneratorSetup.md  agent.py  csa_prompt.py  customer_prompt.py  database_tool.py  export_csa_traces.py  knowledge_base_tool.py  scenarios.tsv  test_conversation.py
python/capstone/conversation_agents/inventory/: acme_catalog_v2.csv  acme_sql_instructions.txt  customers.csv  inventory.db  orders.csv  products.csv
python/capstone/conversation_agents/knowledge_base/: generate_embeddings.py
python/capstone/conversation_agents/knowledge_base/documents/: company_info.md  locations_contact.md  ordering_policy.md  returns_policy.md  shipping_policy.md
python/capstone/conversation_agents/knowledge_base/embeddings/: embeddings.json
python/module-1/: upload_traces.py  upload_traces_nested_bulk.py
python/module-2/: generate_module2_traces.py  module2_traces.json  upload_traces.py
python/module-3/: generate_module3_traces.py  module3_traces.json  upload_traces.py
python/module-4/: generate_module4_traces.py  module4_traces.json  upload_traces.py
python/module-4/lab/: module4_traces.json  upload_traces.py
python/module-4/lesson-1/: lesson1_traces.json  upload_traces.py
