[project]
name = "lca-production-monitoring"
version = "0.1.0"
description = "OfficeFlow agent with LangSmith production monitoring"
requires-python = "==3.12.0"
dependencies = [
    "langchain",
    "langchain-anthropic",
    "langchain-community",
    "langchain-core>=1.2.22",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "ddtrace",
    "openai>=2.29.0",
    "numpy>=2.4.2",
    "langsmith>=0.7.12",
    "click>=8.3.1",
    "rich>=14.3.3",
    "aiohttp>=3.13.4",
    "pygments>=2.20.0",
    "requests>=2.33.0",
]

